@@ -7,6 +7,10 @@ import net.minecraft.pathfinding.Path;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
+import java.util.concurrent.SynchronousQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
+
 import org.jurassicraft.client.model.animation.EntityAnimation;
 import org.jurassicraft.server.entity.DinosaurEntity;
 import org.jurassicraft.server.entity.MetabolismContainer;
@@ -17,11 +21,12 @@ import org.jurassicraft.server.util.GameRuleHandler;
 
 public class DrinkEntityAI extends EntityAIBase {
     protected DinosaurEntity dinosaur;
-
-    protected Path path;
+    private static ThreadPoolExecutor tpe = new ThreadPoolExecutor(0, 3, 10, TimeUnit.SECONDS, new SynchronousQueue<Runnable>());
+    protected volatile Path path;
     protected BlockPos pos;
-
+    protected volatile boolean searched = false;
     protected int giveUpTime;
+    protected volatile BlockPos water = null;
 
     public DrinkEntityAI(DinosaurEntity dinosaur) {
         this.dinosaur = dinosaur;
@@ -34,27 +39,51 @@ public class DrinkEntityAI extends EntityAIBase {
             if (this.dinosaur.getNavigator().noPath() || this.dinosaur.getMetabolism().isDehydrated()) {
                 if (this.dinosaur.getMetabolism().isThirsty()) {
                     World world = this.dinosaur.world;
-                    BlockPos water = null;
-                    OnionTraverser traverser = new OnionTraverser(this.dinosaur.getPosition(), 32);
-                    for (BlockPos pos : traverser) {
-                        if (world.getBlockState(pos).getMaterial() == Material.WATER) {
-                            BlockPos surface = AIUtils.findSurface(world, pos);
-                            BlockPos shore = AIUtils.findShore(world, surface.down());
-                            if (shore != null) {
-                                IBlockState state = world.getBlockState(shore);
-                                if (state.isFullBlock()) {
-                                    Path path = this.dinosaur.getNavigator().getPathToPos(shore);
-                                    if (path != null && path.getCurrentPathLength() != 0) {
-                                        this.path = path;
-                                        water = shore;
-                                        break;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                    if (water != null) {
-                        this.pos = water;
+                    
+					if (this.searched == false && tpe.getActiveCount() < 2) {
+
+						this.searched = true;
+						tpe.execute(new ThreadRunnable(this, this.dinosaur) {
+
+							@Override
+							public void run() {
+								synchronized (world) {
+
+									OnionTraverser traverser = new OnionTraverser(this.entity.getPosition(), 32);
+									for (BlockPos pos : traverser) {
+
+										if (world.getBlockState(pos).getMaterial() == Material.WATER) {
+
+											try {
+												BlockPos surface = AIUtils.findSurface(world, pos);
+												BlockPos shore = AIUtils.findShore(world, surface.down());
+												if (shore != null) {
+													IBlockState state = world.getBlockState(shore);
+													if (state.isFullBlock()) {
+														synchronized (this.ai) {
+															Path path = this.entity.getNavigator().getPathToPos(shore);
+															if (path != null && path.getCurrentPathLength() != 0) {
+																this.ai.path = path;
+																this.ai.water = shore;
+																break;
+															}
+														}
+													}
+												}
+											} catch (Exception e) {
+
+											}
+
+										}
+									}
+								}
+								this.ai.searched = false;
+							}
+						});
+					}
+
+                    if (this.water != null && this.path != null) {
+                        this.pos = this.water;
                         this.giveUpTime = this.path.getCurrentPathLength() * 20;
                         return this.dinosaur.getNavigator().setPath(this.path, 1.0);
                     }
@@ -97,4 +126,16 @@ public class DrinkEntityAI extends EntityAIBase {
     public boolean isInterruptible() {
         return false;
     }
+    
+    abstract class ThreadRunnable implements Runnable {
+
+    	final DinosaurEntity entity;
+    	final DrinkEntityAI ai;
+
+    	ThreadRunnable(DrinkEntityAI drinkEntityAI, DinosaurEntity entity) {
+    		this.ai = drinkEntityAI;
+    		this.entity = entity;
+    	}
+    }
+
 }
