@@ -1,4 +1,9 @@
 *Improved data traffic on larger multiplayer servers
 +Added Hwyla (Waila) support for certain blocks and entities
 *Fixed T. Rex skull hitbox glitches
+*Fixed missing teeth on T. Rex skull
+*Fixed crash with Sponge Forge concerning tour rails
+*Fixed crashes on dedicated servers due to AI overloads (dinosaur autospawning should be harmless now)
+*Fixed hitbox issues with small dinosaurs
++Added config option for dungeon loot
 *Coelacanths now successfully spawn in water biomes when autospawn is on
